--- a/_data/students.yml
+++ b/_data/students.yml
@@ -1,6 +1,16 @@
 # New members please add your credentials to a random position in the file.
 # This is to remove conflicts with other people adding their credentials.
 
+name: Animesh Singh
+  github: animeshsinghweb
+  facebook: f4.animeshsinghweb
+  twitter: animesh22singh
+  image: animeshsinghweb.jpg
+  blog: blog.animeshsingh.in
+  bio: A 17 yr old techygeek, loves coding & FOSS.
+  lat: 22.8035475
+  lng: 86.1949906
+  
 - name: Animesh Singh
   github: animeshsinghweb
   facebook: f4.animeshsinghweb
